[project]
name = "team-env"
version = "0.1.0"
description = ""
authors = [
    {name = "Thiago Thomas",email = "thiagohthomas@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "gym (>=0.26.2,<0.27.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
